# Signature_Validation

./: .gitattributes  License.md  License_Notice.md  README.md  pyproject.toml
Data/: cells_clean_annotation_add_epithelium_mast_cells_microglia.tsv  tcga_annotation.tsv
Figure 2/: noise.ipynb
Figure 2/plot/: noise_gene_data_37_noisy.tsv
Figure 2/plots/: noise_gene_data_10_highly.tsv  noise_gene_data_10_low.tsv  noise_gene_data_10_noisy.tsv  noise_gene_data_37_low.tsv
Figure 3/: correlation.ipynb
Figure 3/Cell_type_FGES_comparison/: Box_plot.ipynb  Scater_plots.ipynb  Stat_fges_table.ipynb
Figure 3/Cell_type_FGES_comparison/data/: Signatures_comparison_prompts.tsv  mapping_ssgseas.pkl
Figure 3/Cell_type_FGES_comparison/tables/: fges_table_cell_type_goi_and_controls.tsv
Figure 4/: azimuth_pred_RS0154_s3_NSCLC.tsv
Figure 4/Cell_type_FGES_comparison/: Box_plot.ipynb  Scater_plots.ipynb  Stat_fges_table.ipynb
Figure 4/Cell_type_FGES_comparison/data/: bindea_petitprez_nirmal_xCELL_signatures.tsv
Figure 4/Cell_type_FGES_comparison/tables/: fges_stats_table.tsv
Figure 5/: Hypoxia_Annotation_test_data.tsv  genesets_msigdb_hypoxia.gmt  genesets_msigdb_senescence.gmt
Figure 5/Hypoxia_Senescence/data/: Hypoxia_Annotation_train_data.tsv
Paper_Code_and_Figures/Figure_2/: noise.ipynb
Paper_Code_and_Figures/Figure_2/plots/: noise_gene_data_37_highly.tsv
Paper_Code_and_Figures/Figure_3/: correlation.ipynb
Paper_Code_and_Figures/Figure_5/EMT_Met_compare/: EMT_Met_compare.ipynb
Supplement/: Figure_S2BCDE.ipynb
src/signature_validation/utils/: utils.py  (+2 more)
(+9 files in other folders)
