[build-system]
requires = ["setuptools>=67.0", "wheel", "cmake", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "Signature_Validation"
version = "0.0.1"
description = "This repository contains code for the Signature Validation pipeline paper 'Analytical validation pipeline for generating highly specific functional gene expression signatures'."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BostonGene", email = "nadezhda.lukashevich@bostongene.com" }]

dependencies = [
  "matplotlib>=3.10.0",
  "mygene>=3.2.2",
  "numpy>=2.1.0",
  "pandas>=2.2.3",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.1",
  "tqdm>=4.67.1",
  "scipy>=1.15.1",
  "distinctipy>=1.3.4",
  "gspread>=6.1.2",
  "oauth2client>=4.1.3",
  "scikit-learn>=1.1.1",
  "pyyaml>=6.0,<7",
  "scanpy>=1.9.1",
  "anndata>=0.10.6",
  "adjustText>=0.7"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["signature_validation*"]
namespaces = false
